Andrew: IntegraciÃ³n completa de mÃ³dulos y preparaciÃ³n para Luna
- BusNovaTech.java: Instrucciones claras para Persona 4 (Luna)
- PersistenciaCola.java: MÃ©todo gestionarTiquetes() agregado
- ColaPrioridad.java: MÃ©todo crearTiquete() agregado
- GestionBuses.java: Mejorado para integraciÃ³n con config.json
- Bus.java: MÃ©todo setEstado() agregado
- config.json: ConfiguraciÃ³n base del sistema
- PreparaciÃ³n completa para integraciÃ³n de Luna (Persona 4)

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "nombreTerminal": "San José",
+  "nombreTerminal": "Terminal BusNovaTech",
   "cantidadBuses": 3,
   "busesPreferenciales": 1,
   "busesDirectos": 1,
   "busesNormales": 1,
-  "usuario1": "admin",
-  "contra1": "123456",
-  "usuario2": "operador",
-  "contra2": "contra123"
+  "usuario1": "adm",
+  "contra1": "123",
+  "usuario2": "adm2",
+  "contra2": "1234"
 }
